# SimBench_release

./: .gitignore  LICENSE.md  README.md  calculate_simbench_score.py  generate_answers.py  main.py  pyproject.toml  requirement.txt  spectrum.yaml  spectrum_grouped.yaml
